src/_components/header/header.module.css
.header {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    width: 100%;
}

.header a {
    align-items: center;
    justify-content: center;
}

.menu {
    display: flex;
    justify-content: flex-end;
}

.menu ul {
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: flex-end;
    gap: 16px;
}

.menu ul li {
    list-style: none;
}

.header a {
    color: inherit;
    text-decoration: none;
}

.menu ul li a {
    display: flex;
    font-weight: bold;
    padding: 0.75rem;
    border-radius: 16px;
    display: unset;
}

.menu ul li a:hover {
    background-color: var(--neutral-colour-transparent);
}

.menuIcon {
    display: none;
}

.menuCloseButton {
    display: none;
}

@media only screen and (max-width: 720px) {
    .header nav {
        display: none;
    }
    .menuIcon {
        display: block;
    }

    .menu {
        display: none;
        position: fixed;
        width: 100vw;
        height: 100vh;
        top: 0;
        left: 0;
        flex-direction: column;
        justify-content: space-between;
        background-color: var(--background);
        padding: var(--body-padding);
    }

    .menu ul {
        flex-direction: column;
    }

    .menu:target {
        display: flex;
    }

    .menuCloseButton {
        display: flex;
        justify-content: flex-end;
    }
}

